# py_gui_poc

./: README.md  app.py  pyproject.toml
src/: app.py  main_window.py  progress_window.py
